# Tsuki-Kuma

./: .gitignore  CHANGES.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  use.md  vite.config.ts
.github/workflows/: release.yml  test-build.yml
src/: App.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/examples/: qwen.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: maths.rs  mod.rs  tts.rs
src-tauri/src/cus_llm/: llm.rs  llm_candle.rs  mod.rs  qwen_llm.rs  tokenizer_stream.rs
src-tauri/src/cus_tts/: example_onnx.rs  mod.rs
src/lib/: commands.svelte.ts
src/lib/components/: AddMath.svelte  HelloWorld.svelte  LLM.svelte  LLM_js.svelte  TTS.svelte
