[package]
name = "tsuki_kuma"
version = "1.0.0"
description = "a desktop application"
authors = ["tardigrade-dot"]
license = "MIT"
repository = "tardigrade-dot/tsuki-kuma"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2.7.1"
thiserror = "2.0.12"
tokenizers = "0.21.4"
once_cell = "1.21.3"

# tts from: https://github.com/supertone-inc/supertonic/blob/main/rust/Cargo.toml
# ONNX Runtime
ort = { version = "2.0.0-rc.7", features = ["coreml"] }
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
hound = "3.5"
rustfft = "6.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
unicode-normalization = "0.1"
regex = "1.10"
libc = "0.2"


#candle
#candle-nn = { version = "0.9.1", features = ["metal"] }
#candle-core = { version = "0.9.1", features = ["metal"] }
#candle-transformers = { version = "0.9.1", features = ["metal"] }
#candle-examples = { version = "0.9.1" }
#candle-onnx = { version = "0.9.1" }

candle = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-core", features = ["metal"]  }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-transformers", features = ["metal"]  }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-nn", features = ["metal"]  }
candle-examples = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-examples" }
candle-onnx = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-onnx" }

hf-hub = "0.4.3"

tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.21"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3"}
